--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,5 +6,28 @@
     <welcome-file-list>
         <welcome-file>loginPage.jsp</welcome-file>
     </welcome-file-list>
-
+    <filter-mapping>
+        <filter-name>AccessFilter</filter-name>
+        <servlet-name>Controller</servlet-name>
+    </filter-mapping>
+    <filter>
+        <filter-name>AccessFilter</filter-name>
+        <filter-class>com.my.payment.filters.AccessFilter</filter-class>
+        <init-param>
+            <param-name>admin</param-name>
+            <param-value>getCards getUserInfo logout getNewCardPage addCard</param-value>
+        </init-param>
+        <init-param>
+            <param-name>user</param-name>
+            <param-value>getCards getUserInfo logout getNewCardPage addCard</param-value>
+        </init-param>
+        <init-param>
+            <param-name>common</param-name>
+            <param-value>errorCommand</param-value>
+        </init-param>
+        <init-param>
+            <param-name>out-of-control</param-name>
+            <param-value>login registration</param-value>
+        </init-param>
+    </filter>
 </web-app>
