--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,11 +15,11 @@
         <filter-class>com.my.payment.filters.AccessFilter</filter-class>
         <init-param>
             <param-name>admin</param-name>
-            <param-value>getCards getUserInfo logout getNewCardPage addCard getPayments makePayment commitPayment blockCard</param-value>
+            <param-value>getCards getUserInfo logout getNewCardPage addCard getPayments makePayment commitPayment blockCard topUp</param-value>
         </init-param>
         <init-param>
             <param-name>user</param-name>
-            <param-value>getCards getUserInfo logout getNewCardPage addCard getPayments makePayment commitPayment blockCard</param-value>
+            <param-value>getCards getUserInfo logout getNewCardPage addCard getPayments makePayment commitPayment blockCard topUp</param-value>
         </init-param>
         <init-param>
             <param-name>common</param-name>
