--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -102,7 +109,6 @@
         </plugins>
         <testResources>
 
-            <!-- don't forget to specify the default test resources directory -->
             <testResource>
                 <directory>src/test/resources</directory>
             </testResource>
