--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
         <filter-class>com.my.payment.filters.AccessFilter</filter-class>
         <init-param>
             <param-name>admin</param-name>
-            <param-value>getCards getUserInfo getPayments changeCardStatus getUsers changeUserStatus generateReport</param-value>
+            <param-value>getCards getUserInfo getPayments changeCardStatus getUsers changeUserStatus generateReport createCard getUserPage</param-value>
         </init-param>
         <init-param>
             <param-name>user</param-name>
